# Text-based-dice-game

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  codecov.yml  improve_quality_todo.md  main.py  pyproject.toml  todo_inplement_tests.md
.github/workflows/: ci.yml  release.yml
docs/: improve_quality_todo.md  issue_10.md  issue_4.md  issue_7.md
src/dice_game/: __init__.py  __main__.py  cli.py  dice.py  game.py  scoring.py
tests/: test_cli.py  test_dice.py  test_game.py  test_scoring.py
