[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dice-game"
description = "A single-player, text-based, Yahtzee-style dice game."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Valentins Fedotovs" }]
keywords = ["dice", "game", "yahtzee", "cli", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/vfedotovs/Text-based-dice-game"
Repository = "https://github.com/vfedotovs/Text-based-dice-game"
Issues = "https://github.com/vfedotovs/Text-based-dice-game/issues"

[project.scripts]
dice-game = "dice_game.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

# --- build backend config ------------------------------------------------

# Single-source the version from the package's __version__.
[tool.hatch.version]
path = "src/dice_game/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dice_game"]
